Fix alignment issue

--- a/src/app/components/home/navbar/Navbar.css
+++ b/src/app/components/home/navbar/Navbar.css
@@ -43,7 +43,12 @@ body {
 }
 
 @media (max-width: 600px) {
-  .navbar-item {
+  .navbar-item,
+  .navbar-brand {
+    display: none;
+  }
+
+  .navbar {
     display: none;
   }
 }
